# claude-bar

./: .gitignore  Cargo.toml  LICENSE  README.md  demo-status.json
.github/workflows/: release.yml
docs/: calculations.md
src/: config.rs  configure.rs  format.rs  git.rs  input.rs  main.rs  render.rs  setup.rs  stats.rs  style.rs  toml_config.rs
tests/: cli.rs  config_integration.rs
tests/baselines/: compact.txt  custom.txt  default.txt  demo-json.txt  fa.txt  full.txt  minimal.txt  noicons.txt
