[package]
name = "claude-bar"
version = "0.2.2"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
[profile.release]
strip = true
lto = true
