[package]
name = "claude-bar"
version = "0.8.9"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ratatui = "0.29"
ansi-to-tui = "7"
unicode-width = "0.2"
terminal_size = "0.4"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
[profile.release]
strip = true
lto = true
